--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
       <meta charset="utf-8">
-      <title>Game Title</title>
+      <title>Robo-8 - Steampunk Fantasy Console</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="icon" type="image/png" href="favicon.png">
       <link rel="stylesheet" href="css/main.css">
