added 2d game jammers cardrige

--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
           <img src="img/active-indicator.png" width="100%" height="auto">
         </div>
       </div>
+      <div class="cartridge no-3" data-game-config-name="2D Game Jammers">
+        <img src="img/cartridge-inactive.png" width="100%" height="auto">
+        <div class="cartridge-active">
+          <img src="img/active-indicator.png" width="100%" height="auto">
+        </div>
+      </div>
     </main>  
     <div id="all-audio">
       <!-- SFX -->
